Bug 149210 - [css-grid] Grid container's height should include scrollbar
Summary: [css-grid] Grid container's height should include scrollbar
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Manuel Rego Casasnovas
URL:
Keywords:
Depends on:
Blocks: 60731
  Show dependency treegraph
 
Reported: 2015-09-16 01:12 PDT by Manuel Rego Casasnovas
Modified: 2015-09-16 03:09 PDT (History)
6 users (show)

See Also:


Attachments
Patch (7.36 KB, patch)
2015-09-16 01:15 PDT, Manuel Rego Casasnovas
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Manuel Rego Casasnovas 2015-09-16 01:12:38 PDT
Scrollbar size is not included in the grid container's height and it should be.

Example to reproduce the issue:
<div style="display: -webkit-grid; overflow: scroll;">
  <div style="background: lime;">item</div>
</div>

The grid's height should be the item's height + the scrollbar.

Note that this is working properly for the width.

This was already reported and fixed in Blink:
https://code.google.com/p/chromium/issues/detail?id=532032
Comment 1 Manuel Rego Casasnovas 2015-09-16 01:15:42 PDT
Created attachment 261302 [details]
Patch
Comment 2 WebKit Commit Bot 2015-09-16 03:09:38 PDT
Comment on attachment 261302 [details]
Patch

Clearing flags on attachment: 261302

Committed r189860: <http://trac.webkit.org/changeset/189860>
Comment 3 WebKit Commit Bot 2015-09-16 03:09:41 PDT
All reviewed patches have been landed.  Closing bug.