[css-grid] Grid container's height should include scrollbar https://bugs.webkit.org/show_bug.cgi?id=149210

Reviewed by Sergio Villar Senin.

Source/WebCore:

Add scrollbar's size in the grid container's height calculation at
RenderGrid::layoutGridItems().

Test: fast/css-grid-layout/grid-container-margin-border-padding-scrollbar.html

* rendering/RenderGrid.cpp:
(WebCore::RenderGrid::layoutGridItems): Include scrollbarLogicalHeight()
while computing the grid's logical height.

LayoutTests:

Add test to check both height and width (which was already working as
expected) with margins, borders, paddings and scrollbars.

* fast/css-grid-layout/grid-container-margin-border-padding-scrollbar-expected.txt: Added.
* fast/css-grid-layout/grid-container-margin-border-padding-scrollbar.html: Added.


Canonical link: https://commits.webkit.org/167313@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189860 268f45cc-cd09-0410-ab3c-d52691b4dbfc